--- a/app/assets/stylesheets/_articles.scss
+++ b/app/assets/stylesheets/_articles.scss
@@ -66,6 +66,8 @@
       width: 24px;
       height: 24px;
       object-fit: cover;
+      border: 1px solid #fff;
+      border-radius: 50%;
     }
   }
 
