--- a/app/assets/stylesheets/_profiles.scss
+++ b/app/assets/stylesheets/_profiles.scss
@@ -3,6 +3,15 @@
   margin-bottom: 40px;
 }
 
+.profile-images img {
+  object-fit: cover;
+  width: 123px;
+  height: 123px;
+  border-radius: 50%;
+  border: 1px solid #fff;
+  background-color: #fff;
+}
+
 .profile-info {
   display: flex;
   align-items: center;
@@ -15,12 +24,16 @@
 
 .profile-edit-btn {
   display: inline-block;
-  padding: 0.3em 1em;
   text-decoration: none;
   color: #67c5ff;
   border: solid 2px #67c5ff;
   border-radius: 3px;
   transition: .2s;
+
+  a {
+    display: block;
+    padding: 4px 12px;
+  }
 
   &:hover {
     background: #67c5ff;
