--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -30,4 +30,4 @@
             .card-footer
               .card-footer-left
                 %p= user_name(article)
-                = image_tag 'default-icon.png', alt: 'アイコン', class: 'avatar'
+                = image_tag current_user.avatar_image, alt: 'アイコン', class: 'avatar'
