--- a/app/views/ranks/new.html.haml
+++ b/app/views/ranks/new.html.haml
@@ -3,9 +3,11 @@
   %tr
     %th user_name
     %th title
+    %th content
     %th likes_count
   - @ranks.each do |rank|
     %tr
-      %td= rank.user_name
-      %td= link_to rank.title, article_path(rank.article_id)
+      %td= User.find(rank.user_id).name
+      %td= link_to rank.title, article_path(rank.id)
+      %td!= rank.content
       %td= rank.likes_count
