--- a/app/views/shared/_articles.html.haml
+++ b/app/views/shared/_articles.html.haml
@@ -1,6 +1,5 @@
 - if @article
-  =# will_paginate
-  - @articles.each do |article|
+  - @articles.first(10).each do |article|
     %li.card.mb-3.is-active
       = link_to article_path(article) do
         .card-body
@@ -17,4 +16,3 @@
           .card-footer-left
             %p= user_name(article)
             = image_tag article.user.avatar_image, alt: 'アイコン', class: 'avatar'
-  = will_paginate
