--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,7 @@
 @import "devise";
 @import 'like-btn';
 @import 'profiles';
+@import 'pagenate';
 
 .logo {
   display: block;
@@ -75,5 +76,30 @@
 
   &:hover {
     box-shadow: 0 8px 16px rgba($color: #000000, $alpha: .3);
+  }
+}
+
+.archives-heading.rank {
+  background: #f89174;
+  box-shadow: 0 0 0 5px #f89174;
+}
+
+.ranking-header {
+  display: flex;
+  align-items: center;
+}
+
+.ranking-txt {
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.ranking-img {
+  width: 60px;
+  transform: translate(0, -5px);
+
+  img {
+    display: block;
+    max-width: 100%;
   }
 }
