--- a/app/views/articles/archives.html.haml
+++ b/app/views/articles/archives.html.haml
@@ -16,11 +16,9 @@
                   - else
                     = image_tag 'heart-active.svg', class: 'like-button-img'
                 %span= article.likes_count
-            .card-footer
-              .card-footer-left
-                %p= nickname_or_name(article)
-                / same as articles
-                / (cf. app/views/shared/_articles.html.haml)
-                /= link_to user_path(article.user_id) do
+          .card-footer
+            .card-footer-left
+              %p= nickname_or_name(article)
+              = link_to user_path(article.user_id) do
                 = image_tag article.user.avatar_image, alt: 'アイコン', class: 'avatar'
     = will_paginate
