--- a/app/views/shared/_articles.html.haml
+++ b/app/views/shared/_articles.html.haml
@@ -13,9 +13,8 @@
                 = image_tag 'heart-active.svg', class: 'like-button-img'
             %span{id: "article-likes-#{article.id}"}= article.likes_count
           %p.card-time-text= "#{time_ago_in_words(article.created_at)}前"
-        .card-footer
-          .card-footer-left
-            %p= nickname_or_name(article) 
-            / card-footer-left is not working (right-aligned)
-            /= link_to user_path(@article.user_id) do
+      .card-footer
+        .card-footer-left
+          %p= nickname_or_name(article) 
+          = link_to user_path(@article.user_id) do
             = image_tag article.user.avatar_image, alt: 'アイコン', class: 'avatar'
